style.css
*, *::before, *::after {
    box-sizing: border-box;
  }
  * {
    margin: 0;
    padding: 0;
  }
  body {
    line-height: 1.5;
    -webkit-font-smoothing: antialiased;
    font-family: system-ui, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
    display: flex;
    flex-direction: column;
    align-items: center;
  }
  img, picture, video, canvas, svg {
    display: block;
    max-width: 100%;
  }
  input, button, textarea, select {
    font: inherit;
  }
  p, h1, h2, h3, h4, h5, h6 {
    overflow-wrap: break-word;
  }
  #root, #__next {
    isolation: isolate;
  }

  /** Start **/

  html {
    scroll-behavior: smooth;
  }

  .nav-bar {
    text-align: center;
    padding: 21px;
    margin-top: 45px;
    width: 450px;
    border-radius: 30px;
    box-shadow: rgba(0, 0, 0, 0.1) 0px 6px 24px 0px, rgba(0, 0, 0, 0.2) 0px 0px 0px 1px;
    background-color: rgb(255, 255, 255);
    margin-bottom: 35px;
   
}

.nav-bar ul {
    list-style-type: none;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 33px;
}

.nav-bar a {
    text-decoration: none;
    color: rgb(95,95,95);
    text-align: center;
    transition: color 0.3s ease;
    font-size: 17px;
    font-weight: 400;

}

.nav-bar a:hover {
    color: black;
}

.home-container {
    display: flex;
    align-items: center;
    gap: 20px;
    height: 700px;
}

.greeting-container {
    width: 600px;
    position: relative;
    bottom: 35px;
}


.greeting-container img {
    width: 100%;
    height: auto;
}


.greeting-container h1 {
    font-size: 70px;
    margin-bottom: 5px;
    
}

.greeting-container p {
    font-size: 20px;
    color: rgb(85, 85, 85);
    width: 520px;
}

.projects-container {
    height: 800px;
    width: 80%;
    text-align: center;
}

.projects-container h1 {
    margin-top: 50px;
    font-size: 40px;
}

.project-div-container {
    display: flex;
    justify-content: center;
    align-items: center;
    flex: auto;
    gap: 70px;
    height: 700px;
}

.project-divs {
    display: flex;
    justify-content: center;
    align-items: center;
    min-height: 400px;
    min-width: 500px;
    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
    border-radius: 20px;
    transition: transform 0.3s ease;
}

.project-divs:hover {
    transform: translateY(-13px);
}

.project-divs.project-one img{
    height: 400px;
    width: auto;
    position: relative;
    bottom: 15px;
    right: 20px;
}

.project-divs.project-two img {
    height: 370px;
    width: auto;
    position: relative;
}

.resume-section {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 1000px;
    width: 80%;
    text-align: center;
    margin-top: 100px;
}

.resume-section h1 {
    margin-bottom: 70px;
    font-size: 40px;
}

.resume-container {
    display: flex;
    align-items: center;
    justify-content: center;
    height: 700px;
    width: 500px;
    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px, rgba(0, 0, 0, 0.07) 0px 2px 4px, rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
}

